# TopDog

./: Cargo.toml  README.md  build-debug.sh  build-release.sh  imgui.ini
assets/: camera.ron  collidable_surface.ron  game_camera.ron  map.ron  paddle.ron
assets/spritesheets/: Char1_sprSheet.ron
resources/: bindings_config.ron  display_config.ron
src/: main.rs  old_main.rs  topdog.code-workspace
src/Compatability/: mod.rs  physical_shape_prefab_data.rs  physics_shape_desc.rs  rigid_body_prefab_data.rs
src/Components/: character_attributes.rs  character_movement_component.rs  character_movement_state.rs  character_stack_state.rs  character_state_machine_component.rs  input_status_component.rs  mod.rs  paddle_component.rs  player_avatar_component.rs  simple.rs  tags.rs  velocity_component.rs
src/Components/Attributes/: character_jump_state.rs  character_movement_state.rs  collider_attribute.rs  mass_attribute.rs  mod.rs
src/Components/Debug/: debug_draw_collider_marker.rs  mod.rs
src/Components/Movement/: character_jump_state.rs  mod.rs
src/Components/Status/: fall_status_component.rs  jump_status_component.rs  mod.rs
src/DataTypes/: mod.rs  movement_attributes.rs
src/Editor/: mod.rs
src/Editor/Entities/: character_inspector_entity.rs  mod.rs
src/Editor/ExternCompatability/: mod.rs  physics_editor_display.rs
src/Editor/Inspectors/: mod.rs  velocity2d_inspector.rs
src/Editor/Systems/: imgui_overlay_system.rs  mod.rs
src/Editor/Traits/: imgui_editor_displayable.rs  mod.rs
src/Entities/: collidable_surface_entity.rs  game_camera.rs  ground_entity.rs  mod.rs  paddle.rs  paddle_entity.rs
src/Prefabs/: camera_prefab.rs  character_states_prefab.rs  collidable_surface_prefab.rs  level_prefab.rs  mod.rs  paddle_prefab.rs
src/Resources/: character_state.rs  database.rs  dimensions.rs  mod.rs  prefab_library.rs  spritesheet_loader.rs
src/States/: editor_overlay_state.rs  gameplay.rs  gameplay_state.rs  mod.rs
src/StaticData/: mod.rs  static_data.rs
src/Systems/: character_fall_system.rs  character_input.rs  character_input_system.rs  character_jump_system.rs  character_movement_system.rs  character_status_system.rs  entity_mover_system.rs  mod.rs
src/Systems/Debug/: debug_draw_collider.rs  debug_lines_clearer.rs  (+4 more)
src/Utility/: mod.rs  time.rs
(+4 files in other folders)
