[package]
name = "top_dog"
version = "0.1.0"
authors = ["Dom Cristaldi, Julius Lee"]
edition = "2018"
description = "Game Jam Game Yo"

[package.metadata.bundle]
name = "top_dog"
identifier = "com.topdog.client"
resources = ["/resources"]


[dependencies]
amethyst = {version = "0.12.0" }
amethyst_rendy = {version = "0.2.0"}
serde = { version = "1.0", features = ["derive"] }
specs-derive = "0.4"
derivative = "1.0.2"
#shred = { version = "0.9.2"}

#strum = "0.15.0"
#strum_macros = "0.15.0"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
#rendy = ["amethyst/gltf"]

default = ["vulkan"]